Test/class.js
class BinarySearchTreeNode {

}

const a = BinarySearchTreeNode(); // error
console.log(a);